Fixed a little with the title and header. Will continue adding dark mode toggle.

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -3,7 +3,7 @@
 
 /* Light mode: */
 @theme static {
-
+  
 }
 
 @media (prefers-color-scheme: dark) {
@@ -15,4 +15,8 @@
 
 .margin-responsive {
   @apply ml-5 mr-5 md:ml-30 md:mr-30;
+}
+
+.padding-responsive {
+  @apply pl-5 pr-5 md:pl-30 md:pr-30;
 }
